# dream

./: README.md  pubspec.yaml
lib/: config.dart  main.dart  services.dart
lib/application/: application.dart
lib/editor/: editor.dart
lib/editor/models/: node.dart  states.dart
lib/editor/nodes/: Text.dart  plus.dart  render.dart  row.dart  text.dart
lib/samples/: routes.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
projects/client/: .gitignore  Cargo.toml  pubspec.yaml
projects/client/lib/: config.dart  main.dart  services.dart
projects/client/lib/application/desktop/: application.dart  route.dart
projects/client/lib/application/web/: application.dart
projects/client/lib/editor/: editor.dart
projects/client/lib/editor/models/: states.dart
projects/client/lib/editor/nodes/: plus.dart  row.dart  text.dart
projects/client/lib/samples/: routes.dart
projects/client/lib/services/models/: task.dart
projects/client/lib/services/store/: hive.dart
projects/client/lib/widgets/: datepicker.dart
projects/client/linux/: my_application.cc
projects/client/linux/flutter/: generated_plugins.cmake
projects/client/macos/Flutter/: GeneratedPluginRegistrant.swift
projects/client/macos/Runner.xcodeproj/: project.pbxproj
projects/client/web/: Cargo.toml  README.md  index.html  package.json  tsconfig.json
projects/client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
projects/client/windows/runner/: main.cpp
projects/common/: Cargo.toml  build.rs
projects/common/src/: cinter.rs  main.rs
projects/couch/: .gitignore  CMakeLists.txt  README.md  index.html  index.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.js  vite.config.ts
projects/couch/example/: package-lock.json  package.json  vite.config.js
projects/couch/example/src/types/: couch_bg.d.ts  types.d.ts
projects/couch/examples/markdown/: CMakeLists.txt  main.cpp
projects/couch/examples/native/: CMakeLists.txt
projects/couch/examples/native/src/: main.c
projects/couch/examples/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
projects/couch/examples/web/src/: index.scss  index.tsx
projects/couch/include/: markdown.h
projects/couch/pkg/: .npmignore  entry.js  package-lock.json  package.json  rollup.config.js
projects/couch/pkg/src/: couch.d.ts  entry.js
projects/couch/src/: index.ts  main.cpp  main.ts
projects/couch/src/markdown/: markdown.cpp  mdtransform.cpp  mdtransform.hpp
projects/couch/src/stele/: stele.cpp
projects/couch/src/utils/: md5.cc  md5.h
projects/couch/src/wasm/: wasm.cpp
projects/pillow/: pubspec.yaml
projects/pillow/example/: pubspec.yaml
projects/pillow/example/lib/: main.dart
projects/pillow/lib/: pillow.dart  pillow_web.dart
projects/pillow/lib/markdown/: markdown.dart
projects/pillow/macos/: pillow.podspec
projects/quilt/: README.md
projects/quilt/web/pkg/: package.json
projects/server/: Makefile  go.mod
projects/server/main/: main.go
projects/server/main/application/: application.go
projects/server/main/config/: config.go
projects/server/main/server/: dev.go  server.go
projects/server_shared/: CMakeLists.txt  Cargo.toml
projects/server_shared/include/: hello_wasm.h
projects/server_shared/src/: main.c
projects/sfx-client/: .gitignore  index.html  index.js  index.jsx  package-lock.json  package.json  pubspec.yaml  tsconfig.json  vite.config.js  vite.config.ts
projects/sfx-client/common/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.html  index.jsx  package-lock.json  package.json  vite.config.js
projects/sfx-client/common/lib/: libhello.dylib  libhello_wasm.dylib
projects/sfx-client/common/src/: lib.rs  main.rs  random.rs
projects/sfx-client/lib/: main.dart  services.dart
projects/sfx-client/macos/Runner.xcodeproj/: project.pbxproj
projects/sfx-client/src/: debug.jsx  index.js  index.scss  index.tsx
projects/sfx-client/src/types/: types.d.ts
projects/sfx-client/web/: bundle.js  debug.html  index.html  package-lock.json  package.json  rollup.config.js  vite.config.js  vite.config.ts
projects/sfx-client/web/src/: debug.js  entry.js  index.js  index.scss
projects/sfx-common/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
projects/sfx-common/lib/: libstructs.dylib
projects/sfx-common/src/hello_world/: hello.c
projects/sfx-common/src/utils/: ctemplate.h
projects/sfx-server/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  go.mod
projects/sfx-server/assets/templates/: ctemplate.html  index.html
projects/sfx-server/main/application/services/: redis.go
projects/sfx-server/main/application/services/email/: email.go
projects/sfx-server/main/application/services/templs/: templs.go
projects/sfx-server/main/config/: config.go
projects/sfx-server/main/server/: server.go
projects/sfx-server/main/server/handlers/: index.go  new.go  sitemap.go
projects/sfx-server/main/server/middleware/: middleware.go
projects/sfx-server/main/server/models/: account.go
projects/sfx-server/main/server/utils/: utils.go
projects/sfx-server/main/web/templates/res/: css.gohtml
projects/sfx-server/src/: lib.cc  lib.h  lib.rs  main.rs
projects/sfx-server/src/server/handlers/: sitemap.cpp
projects/sfx-server/src/utils/: ctemplate.cc
projects/sfxclient/: common  pubspec.yaml
projects/sfxclient/lib/: main.dart
projects/sfxclient/lib/editor/: editor.dart
projects/sfxclient/lib/samples/: myapp.dart
projects/sfxclient/web/: package-lock.json
projects/sfxcommon/: .gitignore  CMakeLists.txt  Cargo.toml
projects/sfxcommon/src/: main.cc
projects/sfxcommon/src/hello_world/: CMakeLists.txt
projects/sfxserver/main/: main.go
projects/sfxserver/main/application/: application.go
src/sfx-client/lib/: main.dart
src/sfx-client/lib/application/: application.dart
src/sfx-client/web/: manifest.json
src/sfx-server/: CMakeLists.txt  Cargo.toml
src/sfx-server/src/: main.rs
web/: index.html
(+76 files in other folders)
