[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2.0", features = ["js"] }
js-sys = "0.3.56"
web-sys = { version = "0.3.0", features = ["console"] }
console_error_panic_hook = "0.1.7"
base64 = "0.13.0"
libc = "0.2.119"
reqwest = { version = "0.11.9", features = ["blocking"] }
axum = "0.4.6"
tokio = { version = "1.0", features = ["full"] }
handlebars = "4.2.1"
serde_json = "1.0.79"

[build-dependencies]
cmake = "0.1.48"