[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.56"
web-sys = { version = "0.3.0", features = ["console"] }
base64 = "0.13.0"
libc = "0.2.119"
reqwest = { version = "0.11.9", features = ["blocking"] }
handlebars = "4.2.1"
serde_json = "1.0.79"
common = { path = "../common" }
