[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2.0", features = ["js"] }
js-sys = "0.3.56"
web-sys = { version = "0.3.0", features = ["console"] }